# filedgr-python-lib-ipfs

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: pr-iso-compliance.yml  release.yml
src/filedgr_lib_ipfs/: __init__.py  ipfs_client.py
tests/: test_ipfs_client.py  test_smoke.py  testfile.txt
tests/nftfc/: index.html
tests/nftfc/css/: app.29af3261.css  chunk-vendors.3ed63bed.css
tests/nftfc/js/: app.a7443d9b.js  app.a7443d9b.js.map  chunk-vendors.2e2ddc6c.js
tests/testdir/: testdircontent.txt  testdircontent2.txt
tests/testdir/testsubdir/: testsubdircontent.txt
