[metadata]
name=filedgr_lib_ipfs
version=attr: filedgr_lib_ipfs.__version__
description="Library to interact with IPFS"
long_description=file: README.md
classifiers=
    Programming Language :: Python :: 3

[options]
zip_safe=True
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
install_requires =
    orjson>=3.7.2
    aiohttp>=3.8.1
    cchardet>=2.1.7
    aiodns>=3.0.0

[options.packages.find]
where=src
exclude =
    tests*

[flake8]
max-line-length = 120
ignore = E501
per-file-ignores =
    __init__.py:F401
max-complexity = 10